force-app/main/default/objects/Case/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product/Service</label>
    <length>150</length>
    <type>Text</type>
</CustomField>