force-app/main/default/objects/Case/fields/Product_For_OneApp_TH__c.field-meta.xml
<CustomField>
    <fullName>Product_For_OneApp_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product For OneApp TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>