force-app/main/default/objects/Case/fields/Product_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Number_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Number 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>