force-app/main/default/objects/Case/fields/Product_Number_Full_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Number_Full_2__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Product Number 2 (Full)</label>
    <length>21</length>
    <type>Text</type>
</CustomField>