force-app/main/default/objects/Case/fields/Product_Number_Temp_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Number_Temp_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Number 1</label>
    <length>21</length>
    <type>Text</type>
</CustomField>