force-app/main/default/objects/Case/fields/Product_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_3__c</fullName>
    <label>Product Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>