force-app/main/default/objects/Case/fields/Prompt_Pay__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Pay__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prompt Pay</label>
    <length>20</length>
    <type>Text</type>
</CustomField>