force-app/main/default/objects/Case/fields/Prompt_Pay_Full__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Pay_Full__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Prompt Pay (Full)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>