force-app/main/default/objects/Case/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Appraisal_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>กระบี่</fullName>
            </value>
            <value>
                <fullName>กรุงเทพมหานคร</fullName>
            </value>
            <value>
                <fullName>กาญจนบุรี</fullName>
            </value>
            <value>
                <fullName>กาฬสินธุ์</fullName>
            </value>
            <value>
                <fullName>กำแพงเพชร</fullName>
            </value>
            <value>
                <fullName>ขอนแก่น</fullName>
            </value>
            <value>
                <fullName>จันทบุรี</fullName>
            </value>
            <value>
                <fullName>ฉะเชิงเทรา</fullName>
            </value>
            <value>
                <fullName>ชลบุรี</fullName>
            </value>
            <value>
                <fullName>ชัยนาท</fullName>
            </value>
            <value>
                <fullName>ชัยภูมิ</fullName>
            </value>
            <value>
                <fullName>ชุมพร</fullName>
            </value>
            <value>
                <fullName>ตรัง</fullName>
            </value>
            <value>
                <fullName>ตราด</fullName>
            </value>
            <value>
                <fullName>ตาก</fullName>
            </value>
            <value>
                <fullName>นครนายก</fullName>
            </value>
            <value>
                <fullName>นครปฐม</fullName>
            </value>
            <value>
                <fullName>นครพนม</fullName>
            </value>
            <value>
                <fullName>นครราชสีมา</fullName>
            </value>
            <value>
                <fullName>นครศรีธรรมราช</fullName>
            </value>
            <value>
                <fullName>นครสวรรค์</fullName>
            </value>
            <value>
                <fullName>นนทบุรี</fullName>
            </value>
            <value>
                <fullName>นราธิวาส</fullName>
            </value>
            <value>
                <fullName>น่าน</fullName>
            </value>
            <value>
                <fullName>บึงกาฬ</fullName>
            </value>
            <value>
                <fullName>บุรีรัมย์</fullName>
            </value>
            <value>
                <fullName>ปทุมธานี</fullName>
            </value>
            <value>
                <fullName>ประจวบคีรีขันธ์</fullName>
            </value>
            <value>
                <fullName>ปราจีนบุรี</fullName>
            </value>
            <value>
                <fullName>ปัตตานี</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>