force-app/main/default/objects/Case/fields/PTA_Segment__c.field-meta.xml
<CustomField>
    <fullName>PTA_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PTA Segment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>