force-app/main/default/objects/Case/fields/Quick_Case__c.field-meta.xml
<CustomField>
    <fullName>Quick_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean Quick Case</description>
    <label>Quick Case Flag</label>
    <type>Checkbox</type>
</CustomField>