force-app/main/default/objects/Case/fields/Recipient_Account_No_Full__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Account_No_Full__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>เลขที่บัญชีผู้รับโอน/รับเงิน (Full)</label>
    <length>175</length>
    <type>Text</type>
</CustomField>