force-app/main/default/objects/Case/fields/Ref_1__c.field-meta.xml
<CustomField>
    <fullName>Ref_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ref.1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>