force-app/main/default/objects/Case/fields/Ref_2__c.field-meta.xml
<CustomField>
    <fullName>Ref_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ref.2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>