force-app/main/default/objects/Case/fields/Refinance__c.field-meta.xml
<CustomField>
    <fullName>Refinance__c</fullName>
    <label>Refinance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>