force-app/main/default/objects/Case/fields/Refinance_Bank__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Bank__c</fullName>
    <label>Refinance Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACL</fullName>
            </value>
            <value>
                <fullName>BAAC</fullName>
            </value>
            <value>
                <fullName>BAY</fullName>
            </value>
            <value>
                <fullName>BBK</fullName>
            </value>
            <value>
                <fullName>BTB</fullName>
            </value>
            <value>
                <fullName>CIMB</fullName>
            </value>
            <value>
                <fullName>GHB</fullName>
            </value>
            <value>
                <fullName>GSB</fullName>
            </value>
            <value>
                <fullName>IBANK</fullName>
            </value>
            <value>
                <fullName>KBANK</fullName>
            </value>
            <value>
                <fullName>Kiatnakin</fullName>
            </value>
            <value>
                <fullName>KTB</fullName>
            </value>
            <value>
                <fullName>LHBANK</fullName>
            </value>
            <value>
                <fullName>SCB</fullName>
            </value>
            <value>
                <fullName>SCIB</fullName>
            </value>
            <value>
                <fullName>SCNB</fullName>
            </value>
            <value>
                <fullName>TCR Bank</fullName>
            </value>
            <value>
                <fullName>TISCO</fullName>
            </value>
            <value>
                <fullName>TBANK</fullName>
            </value>
            <value>
                <fullName>UOB</fullName>
            </value>
            <value>
                <fullName>SME_Bank</fullName>
            </value>
            <value>
                <fullName>ลูกค้าไม่แจ้ง</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>