force-app/main/default/objects/Case/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <description>This field only for send to DWH</description>
    <formula>Account.Owner.Region_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Code</label>
    <type>Text</type>
</CustomField>