force-app/main/default/objects/Case/fields/Remark_Other__c.field-meta.xml
<CustomField>
    <fullName>Remark_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark(Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>