force-app/main/default/objects/Case/fields/Remark_TMB_Date__c.field-meta.xml
<CustomField>
    <fullName>Remark_TMB_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark(TMB) Date</label>
    <type>Date</type>
</CustomField>