force-app/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution Detail</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>