force-app/main/default/objects/Case/fields/Resolution_LIst__c.field-meta.xml
<CustomField>
    <fullName>Resolution_LIst__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT ดำเนินการแก้ไขระบบ</fullName>
            </value>
            <value>
                <fullName>ชีแจงข้อมูลที่ถูกต้องให้ลูกค้ารับทราบ</fullName>
            </value>
            <value>
                <fullName>ดำเนินการตามที่ลูกค้าร้องขอ</fullName>
            </value>
            <value>
                <fullName>ปรับปรุง/แก้ไขรายการให้ลูกค้า</fullName>
            </value>
            <value>
                <fullName>ปรับปรุงการ Set Up ให้ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>ปรับปรุงคะแนนคืน</fullName>
            </value>
            <value>
                <fullName>ปรับปรุงเงินคืน</fullName>
            </value>
            <value>
                <fullName>ยืนยันรายการปกติ</fullName>
            </value>
            <value>
                <fullName>เจ้าหน้าที่แก้ไขรายการให้ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>แนะนำให้ลูกค้ารับทราบ</fullName>
            </value>
            <value>
                <fullName>ลูกค้ายอมยุติข้อร้องเรียน</fullName>
            </value>
            <value>
                <fullName>ธนาคารชดเชยให้ลูกค้า</fullName>
            </value>
            <value>
                <fullName>ส่งบัตร/เอกสารให้ลูกค้าแล้ว</fullName>
            </value>
            <value>
                <fullName>ติดต่อลูกค้าไม่ได้</fullName>
            </value>
            <value>
                <fullName>ลูกค้าไม่ให้ความร่วมมือ</fullName>
            </value>
            <value>
                <fullName>Compliance ได้รับเรื่องเรียบร้อยแล้ว</fullName>
            </value>
            <value>
                <fullName>แก้ไขปัญหาแล้ว ติดต่อลูกค้าไม่ได้ ส่ง SMS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>ลูกค้าไม่รับสาย/ติดต่อลูกค้าไม่ได้</fullName>
                <isActive>false</isActive>
                <label>ลูกค้าไม่รับสาย/ติดต่อลูกค้าไม่ได้</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>