force-app/main/default/objects/Case/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolved By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>