force-app/main/default/objects/Case/fields/Resolved_By_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By_Zone_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolved By Zone Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>