force-app/main/default/objects/Case/fields/Responsible_BU__c.field-meta.xml
<CustomField>
    <fullName>Responsible_BU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsible BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>