force-app/main/default/objects/Case/fields/Return_Case__c.field-meta.xml
<CustomField>
    <fullName>Return_Case__c</fullName>
    <description>This field for use in report only.</description>
    <formula>if(TEXT(Return_Reason__c) &lt;&gt; null, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>