force-app/main/default/objects/Case/fields/RGM_Approve__c.field-meta.xml
<CustomField>
    <fullName>RGM_Approve__c</fullName>
    <label>RGM Approve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>อนุมัติไถ่ถอนทันที</fullName>
            </value>
            <value>
                <fullName>อนุมัติไถ่ถอน 45 วัน</fullName>
            </value>
            <value>
                <fullName>ไม่อนุมัติไถ่ถอน</fullName>
            </value>
            <value>
                <fullName>ชะลอไถ่ถอน</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>