force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Cause Detail</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>