force-app/main/default/objects/Case/fields/Root_Cause_List__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_List__c</fullName>
    <label>Issue Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ttb_Application Error เช่น ttb touch / Internet Banking</fullName>
            </value>
            <value>
                <fullName>ttb_Set Up ข้อมูลไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>ttb_ข้อมูลผลิตภัณฑ์ / Compaign ไม่ชัดเจน</fullName>
            </value>
            <value>
                <fullName>ttb_ข้อมูลในระบบไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>ttb_ปัญหาอื่นๆ จากกระบวนการภายใน</fullName>
            </value>
            <value>
                <fullName>ttb_ปัญหาเกิดจากพนักงาน</fullName>
            </value>
            <value>
                <fullName>ttb_ผลิตภัณฑ์และบริการไม่ตรงตามความต้องการลูกค้า</fullName>
            </value>
            <value>
                <fullName>ttb_ฟังก์ชั่นการทำงานของเครื่อง ATM/ADM ขัดข้อง</fullName>
            </value>
            <value>
                <fullName>ttb_ระบบงานภายในขัดข้อง เช่น F2F /SD /SCS</fullName>
            </value>
            <value>
                <fullName>ttb_ระบบภายในปิดปรับปรุง</fullName>
            </value>
            <value>
                <fullName>ttb_ลูกค้าไม่ยอมรับนโยบายและหลักการปฏิบัติของธนาคาร</fullName>
            </value>
            <value>
                <fullName>ttb_เครือข่ายภายในขัดข้อง Host Down / Time out</fullName>
            </value>
            <value>
                <fullName>ttb_เจ้าหน้าที่ดำเนินการล่าช้า</fullName>
            </value>
            <value>
                <fullName>ttb_เจ้าหน้าที่ทำรายการไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>ttb_เจ้าหน้าที่สอนการใช้งานระบบให้ลูกค้าไม่ครบถ้วน</fullName>
            </value>
            <value>
                <fullName>ttb_เจ้าหน้าที่ให้ข้อมูลลูกค้าไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>ttb_ไม่มี Process รองรับความต้องการลูกค้า</fullName>
            </value>
            <value>
                <fullName>Customer_ลูกค้าร้องขอบริการ</fullName>
            </value>
            <value>
                <fullName>Customer_เกิดจากลูกค้าเข้าใจผิด</fullName>
            </value>
            <value>
                <fullName>Third Party_ATM/ ADM ต่างธนาคารขัดข้อง (Timeout)</fullName>
            </value>
            <value>
                <fullName>Third Party_ATM Timeout</fullName>
            </value>
            <value>
                <fullName>Third Party_Hardware_Machine_Error</fullName>
            </value>
            <value>
                <fullName>Third Party_Network ขัดข้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_การดำเนินการ / การติดต่อที่ไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_ปิดระบบ / Network ขัดข้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_ระบบงานภายนอกขัดข้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_ระบบภายนอกปิดปรับปรุง</fullName>
            </value>
            <value>
                <fullName>Third Party_ระบบเครื่อข่ายภายนอกขัดข้อง</fullName>
            </value>
            <value>
                <fullName>Third Party_ระบบเครื่อข่ายภายนอกขัดข้อง_ไฟฟ้าดับ</fullName>
            </value>
            <value>
                <fullName>Third Party_อยู่ระหว่างตรวจสอบ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>