force-app/main/default/objects/Case/fields/Send_SMS_Status_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_Status_Resolved__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send SMS Status (Resolved)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>