force-app/main/default/objects/Case/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <formula>TEXT(Account.Service_class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Class</label>
    <type>Text</type>
</CustomField>