force-app/main/default/objects/Case/fields/Service_Type_Matrix_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Matrix_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Type Matrix Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>