force-app/main/default/objects/Case/fields/SLA_Day__c.field-meta.xml
<CustomField>
    <fullName>SLA_Day__c</fullName>
    <label>SLA (Day)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>