force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <formula>if(Is_Over_SLA__c = 1,
IMAGE(&quot;/resource/1637834508000/SLA_Over&quot;, &quot;Over SLA&quot;, 25,75),
&apos;Not Over SLA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>