force-app/main/default/objects/Case/fields/SMS_Auto_Completed__c.field-meta.xml
<CustomField>
    <fullName>SMS_Auto_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Case after sent SMS</label>
    <type>Checkbox</type>
</CustomField>