force-app/main/default/objects/Case/fields/SMS_Code_for_Update_Progress__c.field-meta.xml
<CustomField>
    <fullName>SMS_Code_for_Update_Progress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Code for Update Progress</label>
    <length>20</length>
    <type>Text</type>
</CustomField>