force-app/main/default/objects/Case/fields/SMS_Code_In_progress__c.field-meta.xml
<CustomField>
    <fullName>SMS_Code_In_progress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Code (In progress)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>