force-app/main/default/objects/Case/fields/SMS_Code_Resolution_1__c.field-meta.xml
<CustomField>
    <fullName>SMS_Code_Resolution_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Code Resolution 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>