force-app/main/default/objects/Case/fields/SMS_Mobile_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>SMS_Mobile_Endpoint__c</fullName>
    <description>Retail customer 
- If &apos;Contact Person Phone&apos; not null, show &apos;Contact Person Phone&apos;.
- If &apos;Contact Person Phone&apos; is null, show mobile in customer.
Commercial
 - If &apos;Contact Person Phone&apos; not null, show &apos;Contact Person Phone&apos;.
- If &apos;Contact Person Phone&apos; is null, show blank.</description>
    <formula>if( OR(TEXT(Account.Account_Type__c) = &apos;Retail Customer&apos;, Text(Account.Account_Type__c) = &apos;Retail Prospect&apos;),if(Mobile_Condition__c = &apos;&apos;,Account.Mobile_Number_PE__c,Mobile_Condition__c), Mobile_Condition__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Mobile Endpoint</label>
    <type>Text</type>
</CustomField>