force-app/main/default/objects/Case/fields/SMS_Resolution_1__c.field-meta.xml
<CustomField>
    <fullName>SMS_Resolution_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Resolution 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>