force-app/main/default/objects/Case/fields/SMS_Resolution_2__c.field-meta.xml
<CustomField>
    <fullName>SMS_Resolution_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Resolution 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>