force-app/main/default/objects/Case/fields/SMS_Update_Progress_Count__c.field-meta.xml
<CustomField>
    <fullName>SMS_Update_Progress_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SMS Update Progress Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>