force-app/main/default/objects/Case/fields/SMS_update_progress_details__c.field-meta.xml
<CustomField>
    <fullName>SMS_update_progress_details__c</fullName>
    <description>Send update SMS case progress detals</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS update progress details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>