force-app/main/default/objects/Case/fields/Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>Staff_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff ID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>