force-app/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Problem Channel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>