force-app/main/default/objects/Case/fields/Suffix_1__c.field-meta.xml
<CustomField>
    <fullName>Suffix_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suffix 1</label>
    <length>5</length>
    <type>Text</type>
</CustomField>