force-app/main/default/objects/Case/fields/Suffix_3__c.field-meta.xml
<CustomField>
    <fullName>Suffix_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suffix 3</label>
    <length>5</length>
    <type>Text</type>
</CustomField>