force-app/main/default/objects/Case/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <description>ระยะเวลาดำเนินการ (โดยเฉลี่ย)</description>
    <label>Total Turnaround Time (Day)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>