force-app/main/default/objects/Case/fields/TCG_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>TCG_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่ บสย. ครบกำหนด</inlineHelpText>
    <label>TCG Due Date</label>
    <type>Date</type>
</CustomField>