force-app/main/default/objects/Case/fields/To_Ext_2__c.field-meta.xml
<CustomField>
    <fullName>To_Ext_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To / Ext 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>