force-app/main/default/objects/Case/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>วันที่ลูกค้าทำรายการ</label>
    <type>Date</type>
</CustomField>