force-app/main/default/objects/Case/fields/Transaction_Method__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Method__c</fullName>
    <label>ทำรายการโดยวิธี</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>เครื่องถอน / ฝากเงิน อัตโนมัติ (ATM /ADM)</fullName>
            </value>
            <value>
                <fullName>Internet / Mobile Banking</fullName>
            </value>
            <value>
                <fullName>เงินสด</fullName>
            </value>
            <value>
                <fullName>เคาน์เตอร์สาขา</fullName>
            </value>
            <value>
                <fullName>เคาน์เตอร์ Service</fullName>
            </value>
            <value>
                <fullName>เครื่อง EDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>