force-app/main/default/objects/Case/fields/Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Time__c</fullName>
    <label>เวลาที่ลูกค้าทำรายการ</label>
    <type>Time</type>
</CustomField>