force-app/main/default/objects/Case/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>ทำรายการ (ถอน/ฝาก)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ถอน</fullName>
            </value>
            <value>
                <fullName>ฝาก</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>