force-app/main/default/objects/Case/fields/Transfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Amount__c</fullName>
    <label>จำนวนเงินที่โอน</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>