force-app/main/default/objects/Case/fields/UW_Auto_Assign_Flag__c.field-meta.xml
<CustomField>
    <fullName>UW_Auto_Assign_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UW Auto Assign Flag</label>
    <type>Checkbox</type>
</CustomField>