force-app/main/default/objects/Case/fields/UW_Changed_Owner_to_CS_Date__c.field-meta.xml
<CustomField>
    <fullName>UW_Changed_Owner_to_CS_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UW Changed Owner to CS Date</label>
    <type>DateTime</type>
</CustomField>